# systems-that-decide-what-matters

./: .gitignore  README.md  main.py  pyproject.toml
.obsidian/: workspace.json
01-foundations/: 01-the-nature-of-identity-and-digital-identity.md
02-entity-resolution/: 00-resources.md  what-is-entity-resolution.md
02-entity-resolution/HandsOnEntityResolution/data/: mps.csv  mps_they_raw.csv  mps_wiki_raw.csv
02-entity-resolution/HandsOnEntityResolution/src/: 02_Chapter.py
13-reading-log/: week-01.md
15-open-questions/: 01-understanding-human-identity.md
16-contributors-and-experts/: 01-human-identity-and-digital-identity-tenet.md
