[project]
name = "systems-that-decide-what-matters"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "jellyfish>=1.2.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polar>=0.0.127",
    "splink>=4.0.12",
]
